Fixed Go To Top Button Visibility

--- a/css/style.css
+++ b/css/style.css
@@ -861,8 +861,9 @@
         height: 40px;
         width: 40px;
         position: fixed;
-        bottom: 40px;
-        right: 10px;
+        z-index: 999999;
+        top: 7%;
+        right: 5%;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
         /* image replacement properties */
         overflow: hidden;
